# rpgtk

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml  release.yml
core/dice/: model.py
core/dice/tests/: test_constants.py  test_die.py  test_exceptions.py
core/dice/tests/model/die/: test_class.py  test_init.py
cortex/dice/: constants.py  die.py  exceptions.py  model.py
cortex/dice/tests/: test_constants.py  test_die.py  test_exceptions.py
rpgtk/: __init__.py  core.py  exceptions.py
rpgtk/cards/: __init__.py  constants.py  deck.py
rpgtk/items/: base.py  item.py
tests/unit/cards/deck/card/: test_flip.py  test_init.py  test_repr.py
tests/unit/cards/deck/deck/: test_draw.py  test_getitem.py  test_init.py  test_len.py  test_pack.py  test_shuffle.py
tests/unit/core/coin/: test_flip.py  test_init.py
tests/unit/core/dice/: test_eq.py  test_ge.py  test_gt.py  test_init.py  test_len.py  test_mul.py  test_repr.py  test_roll.py
tests/unit/exceptions/: test_dice_exception.py  test_rpgtk_base_exception.py
tests/unit/items/item/: test_from_dict.py  test_init.py  test_to_dict.py
