[tool.poetry]
name = "rpgtk"
version = "0.4.1"
description = "the python rpg toolkit"
authors = ["Gabriel Sarmento <gabrielfs.bot@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/is-gabs/rpgtk"
classifiers=[
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3',
]
packages = [
    { include = "rpgtk" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
